@@ -1,3 +1,12 @@
+Thu Sep 17 12:23:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Process_Semaphore.h
+        * ace/Thread_Semaphore.h
+        * ace/Atomic_Op.h
+        * ace/Condition_Recursive_Thread_Mutex.h
+        * ace/Null_Mutex.h
+          Doxygen fixes
+
 Wed Sep 16 18:44:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/MakeProjectCreator/config/bmake.features:
